--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,24 +10,22 @@ documentation = "https://docs.rs/tulipv2-sdk-common"
 readme = "../README.md"
 
 [dependencies]
-anchor-lang = "0.24.2"
-anchor-spl = "0.24.2"
-spl-token = "3.2.0"
-tulip-arrform = "0.1.1"
-uint = "0.8"
-num-derive = "0.3"
-num-traits = "0.2"
-thiserror = "1.0"
-static-pubkey = "1.0.2"
-tulipv2-sdk-farms = {path = "../farms", version = "0.9.21"}
-arrayref = "0.3.6"
-bytemuck = "1.7.2"
-solana-program = "1.9.13"
-so-defi-utils = "0.1.0"
-spl-associated-token-account = "1.0.3"
+anchor-lang = "=0.25.0"
+anchor-spl = "=0.25.0"
+tulip-arrform = "=0.1.2"
+uint = "=0.9.4"
+num-derive = "=0.3"
+num-traits = "=0.2"
+thiserror = "=1.0"
+static-pubkey = "=1.0.3"
+tulipv2-sdk-farms = { path = "../farms" }
+arrayref = "=0.3.6"
+bytemuck = "=1.12.3"
+so-defi-utils = "=0.1.6"
 sighashdb = "0.1.39"
+
 [dev-dependencies]
-anchor-client = "0.24.2"
+anchor-client = "=0.25.0"
 
 [features]
 default = [
